--- a/client/jubileum.html
+++ b/client/jubileum.html
@@ -17,18 +17,19 @@
 </template>
 
 <template name="jubileum">
-  <h1>Jubileum!</h1>
   <table class="table">
     <tr>
       <th></th>
-      <th>Hoe lang tot 42?</th>
-      <th>Komend jubileum?</th>
+      <th data-sort="birthdate">Hoe lang tot 42?</th>
+      <th data-sort="dateStarted">Komend jubileum?</th>
     </tr>
   {{#each .}}
     <tr>
       <td>{{name}}</td>
-      <td>{{timeUntil42}}</td>
-      <td>{{nextAnniversary}}</td>
+      <td title="42 jaar oud op {{formatDate dateTurns42}}">{{timeUntil42}} ({{formatDate dateTurns42}})</td>
+      <td title="Bij Q sinds {{formatDate dateStarted}}">
+        {{nextAnniversary}} op {{formatDate dateNextAnniversary}} ({{untilAnniversary}})
+      </td>
     </tr>
   {{/each}}
   </table>
